# monitoring-as-code

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release-package.yml
demo/: README.md
demo/applier/: grafana.py  grafana_minimalistic.py  grafana_modelled_conds.py  main.py  monitor_measurements_saved.csv  monitor_measurements_yacloud.csv  new_grafana.py  performance_measure.py  test.py
demo/infra/: docker-compose.yml  http-client.env.json  req.http
demo/infra/configs/data-generator/: config.yml
demo/infra/configs/grafana/provisioning/datasources/: default.yaml
demo/infra/configs/prometheus/: prometheus.yml
demo/requests/: bundle.http  folders.http  http-client.env.json
demo/sandbox/: check_json_serializing.py  folder_sandbox.py  pydantic_class.py  pydantic_exclude.py  pydantic_override_default.py  pydantic_polymorphism_serialization.py  pydantic_serialization.py  serialize_condition_workaround.py  serialize_conditions.py
docs/performance_tests/: performance_measure.py
docs/performance_tests/results/: monitor_measurements_with_update.csv
docs/schemas/: components.puml  provider_workflow.puml  state_workflow.puml
monitor/binds/grafana/: alert.py  api.py  grafana_provider.py  utils.py
monitor/binds/grafana/client/: alert_queries.py  alerting.py  base.py  refined_models.py  types.py
monitor/binds/grafana/client/alert_queries/: classic_conditions.py  queries.py
monitor/binds/grafana/handlers/: alert.py  folder.py  rule_group.py
monitor/binds/grafana/objects/: __init__.py  alert.py  base.py  folder.py
monitor/binds/grafana/resources/: __init__.py  folder.py  rule_group.py
monitor/controller/: __init__.py  api.py  api_entity.py  diff_utils.py  exceptions.py  handler.py  monitor.py  obj.py  provider.py  resource.py  state.py  utils.py
monitor/controller/states/: __init__.py  file.py
monitoring_as_code/binds/grafana/: grafana_provider.py
monitoring_as_code/binds/grafana/client/: alerting.py  types.py
monitoring_as_code/binds/grafana/client/alert_queries/: __init__.py  queries.py
monitoring_as_code/binds/grafana/handlers/: alert.py  folder.py  rule_group.py
monitoring_as_code/binds/grafana/objects/: __init__.py
monitoring_as_code/controller/: exceptions.py  handler.py  monitor.py  provider.py  resource.py  utils.py
tests/: conftest.py  test_monitor.py  test_sample.py  test_utils.py  utils.py
tests/inmemory/: InmemoryObject.py  InmemoryProvider.py  InmemoryState.py
tests/utils/: InmemoryObject.py  InmemoryProvider.py
